# kedro-viz-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-kedro-viz.v1-yml.txt  publish-kedro-viz.yml
assets/docs/: mistake_guithub_actions.txt  solutions_guithub_actions.txt
conf/base/: catalog.yml  parameters_data_processing.yml
src/kedro_viz_learning/: __init__.py  __main__.py  settings.py
src/kedro_viz_learning/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_processing/: test_pipeline.py
